--- a/public/index.html
+++ b/public/index.html
@@ -2,12 +2,13 @@
 <html>
   <head>
     <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
     <title>Indecision App</title>
+    <link rel="icon" href="./images/favicon.png" type="image/png" />
   </head>
   <body>
     <div id="app"></div>
-    <script src="https://unpkg.com/react@16.0.0/umd/react.development.js"></script>
-    <script src="https://unpkg.com/react-dom@16.0.0/umd/react-dom.development.js"></script>
-    <script src="/scripts/app.js"></script>
+
+    <script src="/bundle.js"></script>
   </body>
 </html>
